Add simple receipt item list to ui with non-functional inputs
