# backend/src/modules/app/routes/receipts.ts
@@ -1,5 +1,5 @@
-import { FastifyPluginAsync } from 'fastify';
-import { receiptDtoSchema } from '../dto/receipts';
+import { FastifyPluginAsync, FastifyRequest } from 'fastify';
+import { receiptDtoSchema, receiptItemDtoSchema } from '../dto/receipts';
 
 const receiptRoutes: FastifyPluginAsync = async fastify => {
   fastify.get('/receipts', {
@@ -26,6 +26,43 @@ const receiptRoutes: FastifyPluginAsync = async fastify => {
           totalSum: r.total_sum,
           status: 'waiting', // TODO: ...
           filepath: r.filepath,
+        };
+      });
+    },
+  });
+
+  fastify.get('/receipts/:receiptId/items', {
+    schema: {
+      tags: ['receipts'],
+      description: 'Get receipt items',
+      request: {
+        params: {
+          receiptId: 'number',
+        },
+      },
+      response: {
+        200: {
+          description: 'List of receipt items in a receipt',
+          type: 'array',
+          items: receiptItemDtoSchema,
+        },
+      },
+    },
+    handler: async (
+      request: FastifyRequest<{ Params: { receiptId: string } }>,
+      _reply
+    ) => {
+      const receiptItems = await fastify.receiptRepository.getReceiptItems(
+        parseInt(request.params.receiptId, 10)
+      );
+
+      return receiptItems.map(r => {
+        return {
+          id: r.id,
+          receiptId: r.receipt_id,
+          name: r.name,
+          price: r.price,
+          totalSum: r.category,
         };
       });
     },
